<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBox
        android:id="@+id/geometry_scale_with_zoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/geometry_scale_with_zoom" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/geometry_scale_with_zoom_hint"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/zoom_scale_stops"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/geometry_zoom_scale_stops"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zoom_scale_stops_hint"
        android:inputType="text" />
</merge>
