<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <CheckBox
            android:id="@+id/text_enabled"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/not_hardcoded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:checked="true"
            android:enabled="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fields"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/enter_signature"
            android:inputType="text"
            android:visibility="gone"/>

        <Spinner
            android:id="@+id/field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/marker_type"
            android:padding="5dp"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/tsize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_text_size"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Spinner
            android:id="@+id/text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/label_text_sizes"
            android:padding="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_color"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <LinearLayout
            android:id="@+id/color_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/color_text_ring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/color_ring"/>

            <TextView
                android:id="@+id/color_text_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/text_marker_only"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/alignment"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Spinner
                android:id="@+id/text_alignment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/alignment"
                android:padding="5dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/text_line_only"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/line_label_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="true"
            android:text="@string/line_label_repeat"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/line_label_repeat_hint"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/line_label_rotation"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Spinner
            android:id="@+id/line_label_rotation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/line_label_rotations"
            android:padding="5dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/label_template_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_template"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/label_template"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_template_hint"
        android:inputType="text"/>

    <LinearLayout
        android:id="@+id/label_advanced"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_halo_color"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <LinearLayout
            android:id="@+id/color_text_halo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/color_text_halo_ring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/color_ring"/>

            <TextView
                android:id="@+id/color_text_halo_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_halo_width"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/text_halo_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="1.5"/>

        <TextView
            android:id="@+id/text_opacity_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_opacity"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <SeekBar
            android:id="@+id/text_opacity_seek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_zoom_range"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_zoom_range_hint"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/label_min_zoom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/label_min_zoom_hint"
                android:inputType="number"/>

            <EditText
                android:id="@+id/label_max_zoom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:hint="@string/label_max_zoom_hint"
                android:inputType="number"/>
        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/text_scale_with_zoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_scale_with_zoom"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_scale_with_zoom_hint"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/text_allow_overlap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_allow_overlap"/>
    </LinearLayout>
</LinearLayout>
